--- a/FaithItem.vcxproj
+++ b/FaithItem.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{76db21af-7aab-451e-905f-c4b1a040db6f}</ProjectGuid>
     <RootNamespace>FaithItem</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>CreateBulkItemDSfromCSV</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -130,10 +131,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FaithItem.cxx" />
+    <ClCompile Include="CreateBulkItemDSfromCSV.cxx" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="FaithItem.hxx" />
+    <ClInclude Include="CreateBulkItemDSfromCSV.hxx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
